--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "globaloffensive": "^2.1.0",
     "long": "^3.2.0",
     "pg": "^8.10.0",
+    "redis": "^4.6.6",
     "simple-vdf": "^1.1.1",
     "steam-totp": "^2.1.2",
     "steam-user": "^4.28.1",
