--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "command-line-args": "^5.1.1",
+    "cron": "^2.3.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
     "globaloffensive": "^2.1.0",
